--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,9 @@ cython_debug/
 main.py
 tst.py
 keys
+
+# dh_auto_* and debhelper generated files
+debian/.debhelper/
+debian/debhelper-build-stamp
+debian/soon.postrm.debhelper
+debian/soon/
